--- a/public/admin.html
+++ b/public/admin.html
@@ -4,23 +4,33 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-resource.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-aria.js"></script>
+
+    <!-- Angular Material Javascript now available via Google CDN  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.4/angular-material.min.js"></script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.4/angular-material.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+
+    <!-- Custom JS -->
     <script src="js/account-service.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <link rel="stylesheet" href="todo.css">
+
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h2>Account</h2>
+    <h2>Accounts</h2>
 
     <ul>
-    <li><a href="#/">Default Route</a></li>
-    <li><a href="#/second">Second Route</a></li>
-    <li><a href="#/asdasdasd">Nonexistent Route</a></li>
+    <li><a href="#/">List</a></li>
     </ul>
+    
+
     <div ng-view></div>
 
     <script type="text/javascript">
     
-      </script>
+    </script>
   </body>
 </html>
