Basic account admin UI

--- a/public/admin.html
+++ b/public/admin.html
@@ -20,13 +20,16 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h2>Accounts</h2>
 
-    <ul>
-    <li><a href="#/">List</a></li>
-    </ul>
     
-
+    <md-toolbar class="md-warn">
+    <div class="md-toolbar-tools">
+      <h2 class="md-flex">Accounts</h2>
+    </div>
+    </md-toolbar>
+    <ul>
+        <li><a href="#/">List</a></li>
+    </ul>
     <div ng-view></div>
 
     <script type="text/javascript">
