Simple login page

--- a/public/admin.html
+++ b/public/admin.html
@@ -22,7 +22,7 @@
   <body>
 
     
-    <md-toolbar class="md-warn">
+    <md-toolbar class="md-primary">
     <div class="md-toolbar-tools">
       <h2 class="md-flex">Accounts</h2>
     </div>
