--- a/public/main.html
+++ b/public/main.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="adminApp">
+<html ng-app="mainApp">
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
@@ -16,39 +16,19 @@
     <!-- Custom JS -->
     <script src="js/account-service.js"></script>
     <script src="js/auth-service.js"></script>
-    <script src="js/admin-app.js"></script>
-    <script src="js/admin-controllers.js"></script>
+    <script src="js/main-app.js"></script>
+    <script src="js/main-controllers.js"></script>
 
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body  ng-controller="FrameController as frameCtrl" ng-cloack>
+  <body  ng-controller="MainController as mainCtrl" >
 
     <md-toolbar class="md-primary">
     <div class="md-toolbar-tools">
-        <h2 class="md-flex">Ecofy Identity - Admin</h2>
-        <span flex></span>
-        <!--<md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>-->
-        {{ frameCtrl.session.displayName }}
+      <h2 class="md-flex">Accounts</h2>
+      <span flex></span>
+        <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
         
-        <!-- Account Menu -->
-        <md-menu>
-            <md-button aria-label="Open account menu" class="md-icon-button" ng-click="$mdOpenMenu($event)" md-position-mode="target-right target">
-            <img src="{{frameCtrl.session.imageUrl}}" />
-            </md-button>
-            <md-menu-content width="4">
-            <md-menu-item>
-              <md-button ng-click="ctrl.profile($event)">
-                Account Profile
-              </md-button>
-            </md-menu-item>
-            <md-menu-divider></md-menu-divider>
-            <md-menu-item>
-              <md-button ng-click="ctrl.signout()">
-                Sign out
-              </md-button>
-            </md-menu-item>
-            </md-menu-content>
-        </md-menu>
     </div>
     </md-toolbar>
 
