--- a/public/main.html
+++ b/public/main.html
@@ -21,21 +21,19 @@
 
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body  ng-controller="MainController as mainCtrl" >
+  <body  ng-controller="FrameController as frameCtrl" >
 
     <md-toolbar class="md-primary">
     <div class="md-toolbar-tools">
-      <h2 class="md-flex">Accounts</h2>
+      <h2 class="md-flex">Ecofy Identity</h2>
       <span flex></span>
-        <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon>
-        
+      <md-icon md-svg-src="img/icons/ic_person_black_24px.svg"></md-icon> 
     </div>
     </md-toolbar>
 
     <div ng-view></div>
 
     <script type="text/javascript">
-    
     </script>
   </body>
 </html>
