--- a/public/main.html
+++ b/public/main.html
@@ -14,14 +14,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
 
     <!-- Custom JS -->
-    <script src="js/account-service.js"></script>
     <script src="js/auth-service.js"></script>
+    <script src="js/account-service.js"></script>
     <script src="js/main-app.js"></script>
     <script src="js/main-controllers.js"></script>
 
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body  ng-controller="FrameController as frameCtrl" >
+  <body class="ng-cloack" ng-controller="FrameController as frameCtrl" >
 
     <md-toolbar class="md-primary">
     <div class="md-toolbar-tools">
