--- a/public/admin.html
+++ b/public/admin.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html ng-app="adminApp">
   <head>
+    <!-- material design lite -->
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.indigo-pink.min.css">
+    <script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-route.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-resource.js"></script>
@@ -55,7 +61,9 @@
     <div ng-view></div>
 
     <script type="text/javascript">
-    
+    angular.element(document).ready(function () {
+        componentHandler.upgradeAllRegistered();
+    });
     </script>
   </body>
 </html>
